--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>3.0.6</version>
+        </dependency>
     </dependencies>
 
     <build>
